Fix overflow issue at certain breakpoints
Also added padding for the footer content

--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -41,8 +41,7 @@ $footer-breakpoint-non-large: $footer-max-width + 1px;
 
 footer#colophon {
     margin: 0 auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px;
     max-width: $footer-max-width;
     margin: {
         left: auto;
