--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -402,11 +402,6 @@ body {
 }
 
 @media (min-width: $phone-width) {
-  .client-section {
-    padding-left: 105px;
-    padding-right: 105px;
-  }
-
   .client-nav ul > div {
     padding: 20px 105px 15px 105px;
   }
